TAG: qcreports_db-6-0-22-45
TAG: qcreports_db-6-0-22-44
DATE: 05/23/2023
STAFF: lec
wts2-1185/fl2-355/Variant Curation Activity Report

TAG: qcreports_db-6-0-22-43
DATE: 05/12/2023
STAFF: lec
wts2-1132/fl2-343/Define MGI staff contacts for unassigned Sequence Group QC reports

TAG: qcreports_db-6-0-22-42
DATE: 05/12/2023
STAFF: lec
wts2-1115/fl2-206/QC reports/wiki/etc. changes due to retiring in MGI (part 2)

TAG: qcreports_db-6-0-22-41
DATE: 05/09/2023
STAFF: lec
wts2-1171/fl2-335/new custom report: GXD Specimen Note Search

TAG: qcreports_db-6-0-22-40
DATE: 04/26/2023
STAFF: sc
wts2-1050/Florida Too Project

TAG: qcreports_db-6-0-22-39
DATE: 04/11/2023
STAFF: dbm
fl2-278/Clean up bhmgiapp14ld (scrum server) /data/downloads (includes Test and Prod)
qcr.html: removed gensatload link (retired)

TAG: qcreports_db-6-0-22-38
DATE: 03/01/2023
STAFF: lec
wts2-1093/fl2-233/Missing DOI QC report
weekly/BIB_MissingDOI.sql

TAG: qcreports_db-6-0-22-37
TAG: qcreports_db-6-0-22-36
DATE: 02/28/2023
STAFF: lec
wts2-556/fl2-210/Request for additional GO QC report: under-annotated genes (TR13434)
monthly/GO_Unannotationed.py

TAG: qcreports_db-6-0-22-35
DATE: 02/22/2023
STAFF: lec
wts2-1115/fl2-178/QC reports/wiki/etc. changes due to retiring in MGI (part 1)

TAG: qcreports_db-6-0-22-34
DATE: 02/10/2023
STAFF: sc
WTS2-1114 - report of symbols with GO NOCTUA annotations that have
   symbol, merger, or withdrawal, delete in the last month

TAG: qcreports_db-6-0-22-33
DATE: 02/09/2023
STAFF: lec
wts2-1097/fl2-203/add Experiments where Curation State=Done and Evaluation !=Yes
mgd/GXD_HTExpCuration.py

TAG: no tag
DATE: 02/07/2023
STAFF: lec
ok to install on production at next tag
florida too/fl2b/expresses-component
weekly/MRK_NonMouseNotInEG.py

TAG: qcreports_db-6-0-22-32
TAG: qcreports_db-6-0-22-31
DATE: 02/02/2023
STAFF: sc
Added MP HP Relationship Load and MP HPO Header mapping load to the index page

TAG: qcreports_db-6-0-22-30
DATE: 02/02/2023
STAFF: lec